--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                     <label for="r1">English</label>
                 </div>
                 <div>
-                    <input id="r2" type="radio" name="lang" value="hrv"></input>
+                    <input id="r2" type="radio" name="lang" value="hrv" checked></input>
                     <label for="r2">Hrvatski</label>
                 </div>
                 <div class="search">
